CCD-3424 dev review changes to TTL service
   [CCD-3424](https://tools.hmcts.net/jira/browse/CCD-3424)

Dev review changes to TimeToLiveService.